# cpp-projects

cpp-notes/: cpp-notes.norg
examples-by-tutor/: CMakeLists.txt  ExampleInputComponent.cpp  RectangleGizmoComponent.cpp  main.cpp
examples-by-tutor/.cache/clangd/index/: Component.h.78F1C0E581BDCDBD.idx  Entity.h.8694780EC16538BA.idx  ExampleInput.h.0C463E0DDE439BA6.idx  ExampleInputComponent.cpp.C15C2A1E7A99253A.idx  Layer.h.3E1CC0DBC78A058D.idx  RectangleGizmo.h.23E2C2E5F3BE1B99.idx  RectangleGizmoComponent.cpp.255AB523899E40C7.idx  Scene.h.81F6A5DDA34AC295.idx  Transform.h.E97B943759064FC7.idx  main.cpp.20D97F0FB97E0BD0.idx
examples-by-tutor/include/: Component.h  Entity.h  Layer.h  Scene.h  Transform.h
examples-by-tutor/include/Components/: ExampleInput.h  RectangleGizmo.h
week1/: exercise-1  exercise-1.cpp  exercise-2  exercise-2.cpp  exercise-3  exercise-3.cpp  exercise-4  exercise-4.cpp
week2/exercise1/C20240219/: CMakeLists.txt  exercise-2  exercise_1.cpp  exercise_2.cpp  notes.norg
week3/: Exercise_2.cpp  exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp
week3/headers/: circle.h  window.h
week3/includes/: circle.h  window.h
week4/: Exercise.cpp  exercise  exercise.cpp  main
week4/headers/: Components.h  Entity.h  RectangleComponent.h
week4/includes/: Components.h  Entity.h  RectangleComponent.h
week5/: main  main.cpp
